# WAF

./: .gitmodules  README.md
RecordPlugin/: ASTVisitor.h  CMakeLists.txt  MatchFuncDeclCallback.h  README.md  RecordDecl.cpp  RecordDecl.h  RecordRevise.h
llvm-project/: README.md  oldpatch  patch1
llvm-project/clang/lib/CodeGen/: CGBuilder.h  CGExprScalar.cpp  CodeGenModule.cpp  CodeGenModule.h  CodeGenTypeCache.h  CodeGenTypeCache.h.backup  CodeGenTypes.cpp  ModuleBuilder.cpp
llvm-project/llvm/lib/CodeGen/AsmPrinter/: AsmPrinter.cpp
tests/: README.md
tests/TPC-H/dbgen/: dbgen  delete.sql  import.sh  tpcd.h
tests/TPC-H/dbgen/data5/: import.sh
tests/TPC-H/dbgen/queries/: d1.sql  d10.sql  d11.sql  d12.sql  d13.sql  d14.sql  d15.sql  d16.sql  d17.sql  d18.sql  d19.sql  d2.sql  d20.sql  d21.sql  d22.sql  d3.sql  d4.sql  d5.sql  d6.sql  d7.sql  d8.sql  d9.sql  genq.sh  qgen  run_query.sh
tests/docker_udf/: Makefile  README.txt  client  client.c  test  test.cpp  test1  test1.cpp
tests/docker_udf/count/: Dockerfile  Makefile  count  count.cpp
tests/docker_udf/extract_sentiment/: Dockerfile  Makefile  extract_sentiment  extract_sentiment.cpp
tests/docker_udf/hello/: Dockerfile  hello.c  hello_cli  hello_client.c  hello_serv
tests/docker_udf/include/: int_array_builder.h  int_array_reader.h  int_array_verifier.h
tests/docker_udf/make_pairs/: Makefile  make_pairs  make_pairs.cpp  pair_array.fbs
tests/docker_udf/make_pairs.1/: Dockerfile  make_pairs  make_pairs.cpp
tests/docker_udf/min/: Dockerfile  Makefile  min  min.cpp
tests/docker_udf/product/: Dockerfile  Makefile  product  product.cpp
tests/docker_udf/sum/: Dockerfile  Makefile  long_array.fbs  sum  sum.cpp
tests/docker_udf/sum_of_array/: Dockerfile  Makefile  int_array.fbs  sum_of_array  sum_of_array.c
tests/flatbuffer/: CMakeLists.txt  date.fbs  double_array.fbs  fbs.mk  flat_str.fbs  flat_str_arr.fbs  point.fbs  str_array.fbs  wasm_ser_test.cpp  year_month_day.cpp  year_month_day.fbs
tests/flatbuffer/include/: date_generated.h  double_array_generated.h  double_array_reader.h  flat_str_arr_generated.h  flat_str_generated.h  int_array_generated.h  long_array_generated.h  pair_array_generated.h  point_generated.h  str_array_generated.h  year_month_day_generated.h
tests/sql/: count.sql  extract_sentiment.sql  make_pairs.sql  min.sql  min1.sql  product.sql  product1.sql  sum.sql  sum1.sql
tests/tpcx-bb-v1.6.2/: CHANGELOG.txt  README.md  THIRD_PARTY_NOTICE.txt  bigbench.sha256
tests/tpcx-bb-v1.6.2/commons-lang3-3.14.0/metastore_db/: db.lck  service.properties
tests/tpcx-bb-v1.6.2/conf/: bigBench.properties  userSettings.conf
tests/tpcx-bb-v1.6.2/data-generator/: Constants.properties  LICENSE.txt  log4j2.xml
tests/tpcx-bb-v1.6.2/data-generator/config/: bigbench-generation.xml
tests/tpcx-bb-v1.6.2/distributions/Resources/: NOTICE
tests/tpcx-bb-v1.6.2/distributions/cdh/5.15/hive/conf/: engineSettings.conf  engineSettings.sql
tests/tpcx-bb-v1.6.2/distributions/cdh/5.15/hive/queries/q03/: q03.sql
tests/tpcx-bb-v1.6.2/distributions/cdh/5.15/hive/queries/q04/: explain_q04.sql
tests/tpcx-bb-v1.6.2/distributions/cdh/5.15/hive/queries/q05/: run.sh
tests/tpcx-bb-v1.6.2/distributions/cdh/5.15/hive/queries/q06/: explain_q06.sql  q06.sql
tests/tpcx-bb-v1.6.2/distributions/cdh/5.15/hive/queries/q07/: q07.sql
tests/tpcx-bb-v1.6.2/distributions/cdh/5.15/hive/queries/q08/: q08.sql
tests/tpcx-bb-v1.6.2/distributions/cdh/5.15/hive/queries/q09/: explain_q09.sql
tests/tpcx-bb-v1.6.2/distributions/cdh/6.0/hive/conf/: engineSettings.conf  engineSettings.sql
tests/tpcx-bb-v1.6.2/distributions/cdh/6.0/spark_sql/conf/: engineSettings.conf
tests/tpcx-bb-v1.6.2/distributions/cdh/6.2/hive/conf/: engineSettings.conf
tests/tpcx-bb-v1.6.2/distributions/cdh/6.2/spark_sql/conf/: engineSettings.conf
tests/tpcx-bb-v1.6.2/distributions/cdp/7.0/hive/conf/: engineSettings.conf
tests/tpcx-bb-v1.6.2/distributions/cdp/7.0/spark_sql/conf/: engineSettings.conf
tests/tpcx-bb-v1.6.2/distributions/cdp/7.1/hive/conf/: engineSettings.conf
tests/tpcx-bb-v1.6.2/distributions/hdp/2.6.5/hive/conf/: engineSettings.conf
tests/tpcx-bb-v1.6.2/distributions/hdp/2.6.5/hive/population/: hiveCreateLoad.sql
tests/tpcx-bb-v1.6.2/distributions/hdp/2.6.5/spark_sql/conf/: engineSettings.conf
tests/tpcx-bb-v1.6.2/distributions/hdp/3.1/hive/conf/: engineSettings.conf  engineSettings.sql
tests/tpcx-bb-v1.6.2/distributions/hdp/3.1/hive/population/: hiveCreateLoad.sql
tests/tpcx-bb-v1.6.2/distributions/hdp/3.1/hive/refresh/: hiveRefreshCreateLoad.sql
tests/tpcx-bb-v1.6.2/distributions/maxcompute/3.30/: logEngineEnvInfo
tests/tpcx-bb-v1.6.2/distributions/maxcompute/3.30/sql/: README.md
tests/tpcx-bb-v1.6.2/distributions/maxcompute/3.30/sql/clean/: dropTables.sql
tests/tpcx-bb-v1.6.2/distributions/maxcompute/3.30/sql/conf/: engineSettings.conf  engineSettings.sql  queryParameters.sql
tests/tpcx-bb-v1.6.2/distributions/maxcompute/3.30/sql/population/: odpsCreateLoad.sql
tests/tpcx-bb-v1.6.2/distributions/maxcompute/3.30/sql/refresh/: hiveRefreshCreateLoad.sql
tests/tpcx-bb-v1.6.2/distributions/tdh/9.0/inceptor/conf/: engineSettings.conf  engineSettings.sql
tests/tpcx-bb-v1.6.2/distributions/tdh/9.0/inceptor/population/: hiveCreateLoad.sql
tests/wasm_engine/: Makefile  module_wrapper.h  setup_ramdisk.sh  wasm_engine--1.0.sql  wasm_engine.control  wasm_engine.cpp
tests/wasm_udf/: CMakeLists.txt  count.cpp  extract_sentiment.cpp  make_pairs.cpp  min.cpp  product.cpp  sum.cpp  watermark.cpp.bak
wasm-micro-runtime/build-scripts/: build_llvm.py
wasm-micro-runtime/core/iwasm/aot/: aot_runtime.c  aot_runtime.h
wasm-micro-runtime/core/iwasm/common/: wasm_c_api.c  wasm_runtime_common.c  wasm_runtime_common.h
wasm-micro-runtime/core/iwasm/include/: wasm_export.h
wasm-micro-runtime/core/iwasm/libraries/lib-pthread/: lib_pthread_wrapper.c
wasm-micro-runtime/core/iwasm/libraries/lib-wasi-threads/: lib_wasi_threads_wrapper.c
wasm-micro-runtime/core/iwasm/libraries/thread-mgr/: thread_manager.c
(+409 files in other folders)
